tests/pass/string-as-argument.virtue
func f(a string, b string, c string)
    print "{c} {b} {a}"

f("123", "45", "6")

# 6 45 123
