tests/fail/function-arg-types.virtue
func f(a i64, b string)

f(0, 0)
f("a", "a")
f("a", 0)

# error: type error
#  --> test.virtue:3:6
#    |
#  3 | f(0, 0)
#    |      ^ expected string, found i64
#
# error: type error
#  --> test.virtue:4:3
#    |
#  4 | f("a", "a")
#    |   ^^^ expected i64, found string
#
# error: type error
#  --> test.virtue:5:3
#    |
#  5 | f("a", 0)
#    |   ^^^ expected i64, found string
#
# error: type error
#  --> test.virtue:5:8
#    |
#  5 | f("a", 0)
#    |        ^ expected string, found i64
#
